--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,7 +1,7 @@
 [global_config]
   enabled_plugins = ,
   suppress_multiple_term_dialog = True
-  title_font = Ubuntu Mono derivative Powerline 9
+  title_font = Droid Sans Mono for Powerline 9
   title_hide_sizetext = True
   title_use_system_font = False
 [keybindings]
