--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -18,12 +18,12 @@
 [plugins]
 [profiles]
   [[default]]
-    background_image = None
-    custom_command = /usr/bin/zsh
-    font = Droid Sans Mono for Powerline 10
-    palette = "#2d2d2d:#f92672:#6cc72c:#fe9720:#5f91ef:#9358fe:#36af90:#d3d0c8:#4c4c4c:#ff80f4:#a7e22e:#ffee99:#5fd9ef:#ae82fe:#66efd5:#c7cece"
     background_color = "#2d2d2d"
+    background_image = None
     cursor_color = "#d3d0c8"
+    custom_command = TERM=xterm-256color /usr/bin/zsh
+    font = Droid Sans Mono for Powerline 10
     foreground_color = "#d3d0c8"
+    palette = "#2d2d2d:#f92672:#6cc72c:#fe9720:#5f91ef:#9358fe:#36af90:#d3d0c8:#4c4c4c:#ff80f4:#a7e22e:#ffee99:#5fd9ef:#ae82fe:#66efd5:#c7cece"
     use_custom_command = True
     use_system_font = False
