--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [merge]
 	tool = vimdiff
 [mergetool]
-	prompt = false
+	prompt = true
 [alias]
 	nicelog = log --graph --decorate=full --all --oneline
 [diff]
