removed user config from gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,5 @@
-[user]
-	email = dominik.gierlach@gmail.com
-	name = Dominik Gierlach
+[include]
+	path = ~/.gitconfig.local
 [merge]
 	tool = vimdiff
 [mergetool]
