--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
-
+set -g mouse on
 
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
