open new panes in current directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,10 @@
 set-option -g default-shell /bin/zsh
 set -g mouse on
 
+bind-key '"' split-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
+
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
