--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,53 @@
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
+
+# TMUX Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jooize/tmux-powerline-theme'
+
+# Configuration
+if-shell ': ${TMUX_POWERLINE_SYMBOLS?}' '' 'set-environment -g TMUX_POWERLINE_SYMBOLS "powerline"'
+
 set -g mouse on
+
+# address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+# increase scrollback buffer size
+set -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+# refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+
+# upgrade $TERM
+set -g default-terminal "screen-256color"
+
+# emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set -g status-keys emacs
+
+set -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
+
+set -g mode-keys vi
+
+# Key-bindings
+bind C-p previous-window
+bind C-n next-window
 
 bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
-# TMUX Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jooize/tmux-powerline-theme'
-
-if-shell ': ${TMUX_POWERLINE_SYMBOLS?}' '' 'set-environment -g TMUX_POWERLINE_SYMBOLS "powerline"'
+# Copy to x-clipboard
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
