--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -22,5 +22,7 @@
     },
     "java.import.gradle.enabled": true,
     "java.configuration.updateBuildConfiguration": "automatic",
+    "java.format.settings.url": "~/.dotfiles/.config/nvim/java_codestyle.xml",
+    "java.format.settings.profile": "Default",
     "java.format.enabled": true
 }
