make mac-compatible

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,7 +1,7 @@
 {
     "languageserver": {
         "clangd": {
-            "command": "clangd-7",
+            "command": "clangd",
             "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
             "filetypes": ["c", "cpp", "objc", "objcpp"]
         },
