--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,7 @@ bind-key % split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
 # Copy to x-clipboard
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+if-shell "uname | grep -q Darwin" "source-file ~/.dotfiles/tmux-macosx" "source-file ~/.dotfiles/tmux-linux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
