--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -35,6 +35,12 @@
       "command": "docker-langserver",
       "filetypes": ["dockerfile"],
       "args": ["--stdio"]
+    },
+    "bash": {
+      "command": "bash-language-server",
+      "args": ["start"],
+      "filetypes": ["sh"],
+      "ignoredRootPaths": ["~"]
     }
   },
   "coc.source.buffer.enable": true,
