added go linter to ale

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -27,8 +27,7 @@
       "filetypes": ["go"],
       "initializationOptions": {
         "gocodeCompletionEnabled": true,
-        "diagnosticsEnabled": true,
-        "lintTool": "golint"
+        "diagnosticsEnabled": false
       }
     },
     "dockerfile": {
