--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,10 @@ set-option -g default-shell /bin/zsh
 
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'jooize/tmux-powerline-theme'
+set -g @plugin 'jimeh/tmux-themepack'
 
 # Configuration
-if-shell ': ${TMUX_POWERLINE_SYMBOLS?}' '' 'set-environment -g TMUX_POWERLINE_SYMBOLS "powerline"'
+set -g @themepack 'powerline/block/gray'
 
 set -g mouse on
 
