--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -62,5 +62,6 @@
     }
   },
   "coc.source.buffer.enable": true,
-  "coc.source.buffer.priority": 1
+  "coc.source.buffer.priority": 1,
+  "coc.preferences.formatOnSaveFiletypes": ["rust","java"]
 }
