use current for default push configuration

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 	tool = vimdiff
 	submodule = log
 [push]
-	default = simple
+	default = current
 [gui]
 	fontui = -family \"DejaVu Sans\" -size 9 -weight normal -slant roman -underline 0 -overstrike 0
 	fontdiff = -family \"DejaVu Sans Mono\" -size 9 -weight normal -slant roman -underline 0 -overstrike 0
