let clangd handle clang-tidy (if wanted), remove from ale

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -15,6 +15,7 @@
   "languageserver": {
     "clangd": {
       "command": "clangd",
+      "args": ["--background-index","--fallback-style=google"],
       "rootPatterns": [
         "compile_flags.txt",
         "compile_commands.json",
