added clang-format config

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -49,5 +49,7 @@
   "coc.source.buffer.priority": 1,
   "coc.preferences.formatOnSaveFiletypes": ["rust", "java"],
   "solargraph.formatting": true,
+  "solargraph.definitions": true,
+  "solargraph.references": true,
   "solargraph.autoformat": true
 }
