--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jimeh/tmux-themepack'
 
 # Configuration
-set -g @themepack 'powerline/block/gray'
+set -g @themepack 'powerline/block/blue'
 
 set -g mouse on
 
