--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -5,8 +5,7 @@
   "java.configuration.maven.userSettings": "~/.m2/settings.xml",
   "java.codeGeneration.useBlocks": true,
   "java.configuration.updateBuildConfiguration": "automatic",
-  "java.format.settings.url": "~/.dotfiles/.config/nvim/eclipse-java-google-style.xml",
-  "java.format.settings.profile": "Default",
+  "java.format.settings.url": "~/.java-format.xml",
   "java.format.enabled": true,
   "java.format.onType.enabled": true,
   "java.format.comments.enabled": true,
