--- a/.ackrc
+++ b/.ackrc
@@ -88,6 +88,9 @@
 # (c)tags
 --ignore-file=is:tags
 
+# compile commands
+--ignore-file=is:compile_commands.json
+
 # Backup files
 --ignore-file=ext:bak
 --ignore-file=match:/~$/
