default vsplits, git difftool ask, java lsp interactive

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,7 +4,8 @@
   "java.maven.downloadSources": true,
   "java.configuration.maven.userSettings": "~/.m2/settings.xml",
   "java.codeGeneration.useBlocks": true,
-  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.autobuild.enabled": false,
   "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.format.enabled": true,
   "java.format.onType.enabled": true,
