add cloudformation custom yaml tags

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -18,6 +18,25 @@
     "~/go/src/github.com/awslabs/goformation/schema/cloudformation.schema.json": "/*.template.*",
     "kubernetes": "/*"
   },
+  "yaml.customTags": [
+    "!Ref",
+    "!GetAtt",
+    "!fn",
+    "!And",
+    "!If",
+    "!Not",
+    "!Equals",
+    "!Or",
+    "!FindInMap sequence",
+    "!Base64",
+    "!Cidr",
+    "!Sub",
+    "!GetAZs",
+    "!ImportValue",
+    "!Select",
+    "!Split",
+    "!Join sequence"
+  ],
   "languageserver": {
     "clangd": {
       "command": "clangd",
