--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -37,6 +37,8 @@
     "!Split",
     "!Join sequence"
   ],
+  "python.formatting.provider": "yapf",
+  "python.formatting.yapfArgs": ["--style=google"],
   "languageserver": {
     "clangd": {
       "command": "clangd",
