--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -38,7 +38,10 @@
     "!Join sequence"
   ],
   "python.formatting.provider": "yapf",
-  "python.formatting.yapfArgs": ["--style=google"],
+  "python.formatting.yapfArgs": [
+    "--style",
+    "{based_on_style: google, indent_width: 4}"
+  ],
   "languageserver": {
     "clangd": {
       "command": "clangd",
