--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -12,8 +12,8 @@ order += "load"
 order += "cpu_temperature 0"
 order += "disk /"
 order += "disk /home"
-order += "ethernet enp1s0"
-order += "wireless wlp2s0"
+order += "ethernet eth0"
+order += "wireless wlan0"
 order += "volume master"
 order += "battery 1"
 order += "tztime local"
@@ -35,12 +35,12 @@ disk "/home" {
         format = "<span background='#a1d569'>  %free Free </span>"
 }
 
-ethernet enp1s0 {
+ethernet eth0 {
         format_up = "<span background='#88c0d0'>  %ip </span>"
         format_down = "<span background='#88c0d0'>  Disconnected </span>"
 }
 
-wireless wlp2s0 {
+wireless wlan0 {
         format_up = "<span background='#b48ead'>  %essid </span>"
         format_down = "<span background='#b48ead'>  Disconnected </span>"
 }
