--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,7 +3,7 @@ set $mod Mod4
 set $alt Mod1
 
 # set font
-font pango: Noto Sans 8
+font pango: SauceCodePro Sans 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
