--- a/.config/i3-autodisplay/config.yml
+++ b/.config/i3-autodisplay/config.yml
@@ -15,8 +15,8 @@ displays:
   - name: eDP
     workspaces: [1, 2, 3, 4, 5, 6, 7, 8, 9, 0]
   - name: HDMI-A-0
-    workspaces: [2, 4, 6, 8, 0]
+    workspaces: [11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
     randr_extra_options: "--left-of eDP"
   - name: DisplayPort-0
-    workspaces: [2, 4, 6, 8, 0]
+    workspaces: [11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
     randr_extra_options: "--left-of eDP"
